# teminal

./: .gitignore  main.cpp
doc/: FUNCTIONS.md  README.md
include/: Concepts.hpp  Counter.hpp  Matrix.hpp  SDL2_.hpp  debug.hpp  font.hpp  screen.hpp
include/parser/: parser.hpp
render/: .window.hh.swp
src/: CMakeLists.txt  main.cpp  parser.cpp  screen.cpp
src/debug/: debug.cpp
src/include/: font.hpp  screen.hpp
src/include/parser/: parser.hpp
src/rendering/: SDL2_.cpp  screen.cpp
